--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href=".assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 
@@ -52,7 +52,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/hero-bg.JPG" alt="Background Image">
+      <img src=".assets/img/hero-bg.JPG" alt="Background Image">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
