--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src=".assets/img/hero-bg.JPG" alt="Background Image">
+      <img src="assets/img/hero-bg.JPG" alt="Background Image">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
