--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
               <div class="resume-item">
                 <h4>HIGH SCHOOL</h4>
-                <h5>2022 - 2025</h5>
+                <h5>2022 - Ongoing</h5>
                 <p><em>SAMI FRASHËRI HIGH SCHOOL, TIRANA, ALBANIA</em></p>
               </div><!-- Edn Resume Item -->
 
