Updated github link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2>Aleks Korri</h2>
             <p>I'm a <span class="typed" data-typed-items="Python Developer, Web Developer, Freelancer">Freelancer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="https://github.com/thisisaleks"><i class="bi bi-github"></i></a>
+              <a href="https://github.com/alekskorri"><i class="bi bi-github"></i></a>
               <a href="https://www.facebook.com/alekskorri/?_rdr"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/alekskorri/"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/in/alekskorri/?originalSubdomain=al"><i class="bi bi-linkedin"></i></a>
@@ -366,7 +366,7 @@
       <h3 class="sitename">Aleks Korri</h3>
       <p>Bringing creativity and precision to every project. Striving for excellence in all my endeavors.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/thisisaleks"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/alekskorri"><i class="bi bi-github"></i></a>
         <a href="https://www.facebook.com/alekskorri/?_rdr"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/alekskorri/"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/alekskorri/?originalSubdomain=al"><i class="bi bi-linkedin"></i></a>
