--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
           </div>
         </div><!-- End Skills Item -->
 
+        <div class="progress">
+          <span class="skill"><span>FLASK</span> <i class="val">80%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
       </div>
 
       <div class="col-lg-6">
@@ -272,6 +279,14 @@
             <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div><!-- End Skills Item -->
+
+        <div class="progress">
+          <span class="skill"><span>REACT</span> <i class="val">70%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
 
       </div>
 
