--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>ABOUT</h2>
         <p>I am a software developer with a strong expertise in Python and a broad proficiency in other 
-          programming languages and databases, including JavaScript, C++, Java, MySQL, and MongoDB. 
+          programming languages and databases, including JavaScript, C++, Java, MySQL, and Flask. 
           Over the years, I have demonstrated punctuality, a strong work ethic, and determination in all my endeavors.
           My programming skills are highlighted by my ability to quickly and effectively troubleshoot and resolve various issues. 
           I code daily, whether working on freelance projects or my personal endeavors. Currently, I am particularly excited 
@@ -141,54 +141,59 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
-
               <div class="resume-item">
                 <h4>HIGH SCHOOL</h4>
                 <h5>2022 - Ongoing</h5>
                 <p><em>SAMI FRASHËRI HIGH SCHOOL, TIRANA, ALBANIA</em></p>
-              </div><!-- Edn Resume Item -->
+              </div><!-- End Resume Item -->
 
-            <h3 class="resume-title">Certifications</h3>
-            <div class="resume-item">
-              <h4>DJANGO FRAMEWORK SPECIALIZATION</h4>
-              <h5>09 September, 2024</h5>
-              <p><em>Django Course</em></p>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>CERTIFIED PYTHON DEVELOPER</h4>
-              <h5>04 August, 2024</h5>
-              <p><em>Software Development Academy, Tirana, Albania</em></p>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>AI FOR YOUTH PROGRAM</h4>
-              <h5>December 22, 2023</h5>
-              <p><em>Intel</em></p>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>PROGRAMMING AND ROBOTICS BASICS</h4>
-              <h5>07 July, 2023</h5>
-              <p><em>Tumo Center Tirana</em></p>
-            </div><!-- Edn Resume Item -->
-    
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>PYTHON DEVELOPER</h4>
               <h5>2024 - Present</h5>
               <p><em>Freelancer</em></p>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <div class="resume-item">
               <h4>WEB DEVELOPER</h4>
               <h5>2023 - Present</h5>
               <p><em>Freelancer</em></p>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
+    
+
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title">Certifications</h3>
+              <div class="resume-item">
+                <h4>DJANGO FRAMEWORK SPECIALIZATION</h4>
+                <h5>14 September, 2024</h5>
+                <p><em>Django Course</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>CERTIFIED PYTHON DEVELOPER</h4>
+                <h5>09 September, 2024</h5>
+                <p><em>Software Development Academy, Tirana, Albania</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>CERTIFIED PYTHON DEVELOPER</h4>
+                <h5>04 August, 2024</h5>
+                <p><em>Sololearn, Programming Course</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>AI FOR YOUTH PROGRAM</h4>
+                <h5>December 22, 2023</h5>
+                <p><em>Intel</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>PROGRAMMING AND ROBOTICS BASICS</h4>
+                <h5>07 July, 2023</h5>
+                <p><em>Tumo Center Tirana</em></p>
+              </div><!-- End Resume Item -->
 
           </div>
 
