--- a/index.html
+++ b/index.html
@@ -140,7 +140,42 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Certifications</h3>
+              <div class="resume-item">
+                <h4>DJANGO FRAMEWORK SPECIALIZATION</h4>
+                <h5>14 September, 2024</h5>
+                <p><em>Django Course</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>CERTIFIED PYTHON DEVELOPER</h4>
+                <h5>09 September, 2024</h5>
+                <p><em>Software Development Academy, Tirana, Albania</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>PYTHON CERTIFICATION</h4>
+                <h5>04 August, 2024</h5>
+                <p><em>Sololearn, Programming Course</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>AI FOR YOUTH PROGRAM</h4>
+                <h5>December 22, 2023</h5>
+                <p><em>Intel</em></p>
+              </div><!-- End Resume Item -->
+  
+              <div class="resume-item">
+                <h4>PROGRAMMING AND ROBOTICS BASICS</h4>
+                <h5>07 July, 2023</h5>
+                <p><em>Tumo Center Tirana</em></p>
+              </div><!-- End Resume Item -->
+    
+
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+             <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>HIGH SCHOOL</h4>
                 <h5>2022 - Ongoing</h5>
@@ -159,41 +194,6 @@
               <h5>2023 - Present</h5>
               <p><em>Freelancer</em></p>
             </div><!-- End Resume Item -->
-    
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Certifications</h3>
-              <div class="resume-item">
-                <h4>DJANGO FRAMEWORK SPECIALIZATION</h4>
-                <h5>14 September, 2024</h5>
-                <p><em>Django Course</em></p>
-              </div><!-- End Resume Item -->
-  
-              <div class="resume-item">
-                <h4>CERTIFIED PYTHON DEVELOPER</h4>
-                <h5>09 September, 2024</h5>
-                <p><em>Software Development Academy, Tirana, Albania</em></p>
-              </div><!-- End Resume Item -->
-  
-              <div class="resume-item">
-                <h4>CERTIFIED PYTHON DEVELOPER</h4>
-                <h5>04 August, 2024</h5>
-                <p><em>Sololearn, Programming Course</em></p>
-              </div><!-- End Resume Item -->
-  
-              <div class="resume-item">
-                <h4>AI FOR YOUTH PROGRAM</h4>
-                <h5>December 22, 2023</h5>
-                <p><em>Intel</em></p>
-              </div><!-- End Resume Item -->
-  
-              <div class="resume-item">
-                <h4>PROGRAMMING AND ROBOTICS BASICS</h4>
-                <h5>07 July, 2023</h5>
-                <p><em>Tumo Center Tirana</em></p>
-              </div><!-- End Resume Item -->
 
           </div>
 
