--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Aleks Korri</h2>
-            <p>I'm a <span class="typed" data-typed-items="Python Developer, Web Developer, Freelancer">Freelancer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm a <span class="typed" data-typed-items="Python Developer, Web Developer">Freelancer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://github.com/alekskorri"><i class="bi bi-github"></i></a>
               <a href="https://www.facebook.com/alekskorri/?_rdr"><i class="bi bi-facebook"></i></a>
@@ -143,13 +143,13 @@
             <h3 class="resume-title">Certifications</h3>
               <div class="resume-item">
                 <h4>DJANGO FRAMEWORK SPECIALIZATION</h4>
-                <h5>14 September, 2024</h5>
+                <h5>21 November, 2024</h5>
                 <p><em>Django Course</em></p>
               </div><!-- End Resume Item -->
   
               <div class="resume-item">
                 <h4>CERTIFIED PYTHON DEVELOPER</h4>
-                <h5>09 September, 2024</h5>
+                <h5>23 October, 2024</h5>
                 <p><em>Software Development Academy, Tirana, Albania</em></p>
               </div><!-- End Resume Item -->
   
