--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Aleks Korri</h2>
-            <p>I'm a <span class="typed" data-typed-items="Python Developer, Web Developer">Freelancer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm a <span class="typed" data-typed-items="Web Developer, Freelancer">Python Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://github.com/alekskorri"><i class="bi bi-github"></i></a>
               <a href="https://www.facebook.com/alekskorri/?_rdr"><i class="bi bi-facebook"></i></a>
