--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Aleks Korri</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="Official personal website of Aleks Korri, Python Developer, Web Developer, and Freelancer based in Tirana, Albania. Explore my resume, skills, projects, and certifications.">
+  <meta name="keywords" content="Aleks Korri, alekskorri, korri, Python Developer, Web Developer, Freelancer, Django, Flask, MySQL, Tirana, Albania">
+  <meta property="og:title" content="Aleks Korri - Python & Web Developer">
+  <meta property="og:description" content="Portfolio of Aleks Korri, Python Developer, Web Developer, and Freelancer based in Tirana, Albania.">
+  <meta property="og:image" content="https://alekskorri.github.io/assets/img/apple-touch-icon.png">
+  <meta property="og:url" content="https://alekskorri.github.io/">
+  <meta property="og:type" content="website">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
