--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:type" content="website">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" type="image/x-icon" href="https://alekskorri.github.io/assets/img/favicon.ico">
+  <link rel="apple-touch-icon" href="https://alekskorri.github.io/assets/img/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
