--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Aleks Korri</title>
+  <title>Aleks Korri - Personal Website & Portfolio</title>
   <meta name="description" content="Official personal website of Aleks Korri, Python Developer, Web Developer, and Freelancer based in Tirana, Albania. Explore my resume, skills, projects, and certifications.">
   <meta name="keywords" content="Aleks Korri, alekskorri, korri, Python Developer, Web Developer, Freelancer, Django, Flask, MySQL, Tirana, Albania">
   <meta property="og:title" content="Aleks Korri - Python & Web Developer">
