--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <meta property="og:type" content="website">
 
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="https://alekskorri.github.io/assets/img/favicon.ico">
-  <link rel="apple-touch-icon" href="https://alekskorri.github.io/assets/img/apple-touch-icon.png">
+  <link rel="icon" href="https://alekskorri.github.io/assets/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://alekskorri.github.io/assets/img/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://alekskorri.github.io/assets/img/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
