--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <meta property="og:url" content="https://alekskorri.github.io/">
   <meta property="og:type" content="website">
 
-  <!-- Favicons -->
-  <link rel="icon" href="https://alekskorri.github.io/assets/img/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="https://alekskorri.github.io/assets/img/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://alekskorri.github.io/assets/img/apple-touch-icon.png">
+  <!-- Favicons https://alekskorri.github.io/ -->
+  <link rel="icon" href="/assets/img/favicon.ico">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
