--- a/index.html
+++ b/index.html
@@ -259,6 +259,13 @@
           </div>
         </div><!-- End Skills Item -->
 
+        <div class="progress">
+          <span class="skill"><span>JAVA</span> <i class="val">70%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
       </div>
 
       <div class="col-lg-6">
@@ -295,6 +302,13 @@
           <span class="skill"><span>REACT</span> <i class="val">70%</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
+        <div class="progress">
+          <span class="skill"><span>SPRING BOOT</span> <i class="val">65%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div><!-- End Skills Item -->
 
