--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
         </div><!-- End Skills Item -->
 
         <div class="progress">
-          <span class="skill"><span>FLASK</span> <i class="val">80%</i></span>
+          <span class="skill"><span>NEXT.JS</span> <i class="val">75%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div><!-- End Skills Item -->
 
@@ -299,9 +299,9 @@
         </div><!-- End Skills Item -->
 
         <div class="progress">
-          <span class="skill"><span>REACT</span> <i class="val">70%</i></span>
+          <span class="skill"><span>REACT</span> <i class="val">80%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div><!-- End Skills Item -->
 
