Update index.html (experience and school)

--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
              <h3 class="resume-title">Education</h3>
               <div class="resume-item">
+                <h4>BACHELOR IN SOFTWARE ENGINEERING</h4>
+                <h5>2025 - 2028</h5>
+                <p><em>UNIVERSITY OF NEW YORK TIRANA, ALBANIA</em></p>
+              </div><!-- End Resume Item -->
+            
+              <div class="resume-item">
                 <h4>HIGH SCHOOL</h4>
                 <h5>2022 - 2025</h5>
                 <p><em>SAMI FRASHËRI HIGH SCHOOL, TIRANA, ALBANIA</em></p>
@@ -190,14 +196,20 @@
 
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Software Engineering Internship</h4>
+              <h5>August 2025 - September 2025</h5>
+              <p><em>Vodafone Albania</em></p>
+            </div><!-- End Resume Item -->
+            
+            <div class="resume-item">
               <h4>PYTHON DEVELOPER</h4>
-              <h5>2024 - Present</h5>
+              <h5>November 2024 - Present</h5>
               <p><em>Freelancer</em></p>
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
               <h4>WEB DEVELOPER</h4>
-              <h5>2023 - Present</h5>
+              <h5>August 2023 - Present</h5>
               <p><em>Freelancer</em></p>
             </div><!-- End Resume Item -->
 
