--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Aleks Korri</title>
-  <meta name="description" content="Official personal website of Aleks Korri, Python Developer, Web Developer, and Freelancer based in Tirana, Albania. Explore my resume, skills, projects, and certifications.">
-  <meta name="keywords" content="Aleks Korri, alekskorri, korri, Python Developer, Web Developer, Freelancer, Django, Flask, MySQL, Tirana, Albania">
-  <meta property="og:title" content="Aleks Korri - Python & Web Developer">
-  <meta property="og:description" content="Portfolio of Aleks Korri, Python Developer, Web Developer, and Freelancer based in Tirana, Albania.">
+  <meta name="description" content="Official personal website of Aleks Korri, Software Engineer, Python Developer, and Web Developer based in Tirana, Albania. Explore my resume, skills, projects, and certifications.">
+  <meta name="keywords" content="Aleks Korri, alekskorri, korri, Python Developer, Web Developer, Software Engineer, Django, Flask, MySQL, Tirana, Albania">
+  <meta property="og:title" content="Aleks Korri - Software Engineer">
+  <meta property="og:description" content="Portfolio of Aleks Korri, Software Engineer, Python Developer, and Web Developer based in Tirana, Albania.">
   <meta property="og:image" content="https://alekskorri.github.io/assets/img/apple-touch-icon.png">
   <meta property="og:url" content="https://alekskorri.github.io/">
   <meta property="og:type" content="website">
@@ -64,7 +64,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Aleks Korri</h2>
-            <p>I'm a <span class="typed" data-typed-items="Python Developer, Web Developer, Software Engineer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm a <span class="typed" data-typed-items="Software Engineer, Python Developer, Web Developer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://github.com/alekskorri"><i class="bi bi-github"></i></a>
               <a href="https://www.facebook.com/alekskorri/?_rdr"><i class="bi bi-facebook"></i></a>
@@ -99,7 +99,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Developer &amp; Freelancer.</h2>
+            <h2>Software Engineer &amp; Developer.</h2>
             <p class="fst-italic py-3">
               With a passion for technology and a knack for solving complex problems, I bring ideas to life through code.
             </p>
